Add background music

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <img id="texture-bg" src="assets/crystals.jpg">
         <!-- http://wallpapersafari.com/w/0HvG2Y/ -->
         <img id="texture-obstacle" src="assets/keys.png">
+
+        <audio id="audio-theme" src="assets/pursuit.ogg"></audio>
     </div>
 </body>
 
